--- a/css/02.css
+++ b/css/02.css
@@ -12,6 +12,7 @@ a {
     color: inherit;
 }
 .header {
+    margin-top: 30px;
     background-color: #ffffff;
     width: 1920px;
     text-align: center;
